# pySeasonal

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  aggregate_hindcast.py  aggregate_obs.py  assign_skill2forecast.py  downloadme_era5_monthly_pressure_level.py  downloadme_era5_monthly_single_level.py  functions_seasonal.py  generate_forecast.sh  get_skill.py  get_skill_season.py  get_skill_season.sh  get_skill_season_valid.py  inconsistencies.txt  info_for_frontend.txt  launch_get_skill_season.sh  launch_plot_seasonal_validation_results.sh  launch_pred2tercile_operational.sh  launch_send2queue_get_skill_season.sh  launchme.sh  map_results.py  obsolete_launch_get_skill_season.sh  oni2enso.py  plot_seasonal_validation_results.py  plot_seasonal_validation_results.sh  pred2tercile.py  pred2tercile_operational.py  pyproject.toml  regrid_obs.py  seas2ipe.py  send2queue_get_skill_season.sh  variables_launch_send2queue_get_skill_season.sh  version_tracker.txt  visor.json
bash/: get_skill_season.sh  launch_plot_seasonal_validation_results.sh  launch_pred2tercile_operational.sh  launch_send2queue_get_skill_season.sh  lustre2local.sh  plot_seasonal_validation_results.sh  send2queue_get_skill_season.sh  variables_launch_send2queue_get_skill_season.sh  variables_launch_send2queue_get_skill_season_Canarias.sh  variables_launch_send2queue_get_skill_season_Iberia.sh  variables_launch_send2queue_get_skill_season_medcof.sh
config/: config_for_aggregate_hindcast.py  config_for_aggregate_hindcast.yaml  config_for_aggregate_hindcast_Canarias.yaml  config_for_aggregate_hindcast_Iberia.yaml  config_for_aggregate_hindcast_medcof.yaml  config_for_aggregate_obs_Canarias.yaml  config_for_aggregate_obs_Iberia.yaml  config_for_aggregate_obs_medcof.yaml  config_for_get_skill_season.py  config_for_get_skill_season.yaml  config_for_get_skill_season_Canarias.yaml  config_for_get_skill_season_Iberia.yaml  config_for_get_skill_season_medcof.yaml  config_for_medcof2hr.yaml  config_for_plot_seasonal_validation_results_Canarias.yaml  config_for_plot_seasonal_validation_results_Iberia.yaml  config_for_plot_seasonal_validation_results_medcof.yaml  config_for_pred2tercile_operational.py  config_for_pred2tercile_operational.yaml  config_for_pred2tercile_operational_Canarias.yaml  config_for_pred2tercile_operational_Iberia.yaml  config_for_pred2tercile_operational_medcof.yaml  config_for_pred2tercile_operational_medcof2Canarias.yaml  config_for_pred2tercile_operational_medcof2Iberia.yaml  config_for_seas2ipe.yaml  config_for_seas2ipe_Canarias.yaml  config_for_seas2ipe_Iberia.yaml  config_for_seas2ipe_medcof.yaml  config_for_seas2ipe_singlevars_Iberia.yaml
products/: seas2ipe.py
pyseasonal/: aggregate_hindcast.py  aggregate_obs.py  cli_product_ipe.py  cli_tercile.py  functions_seasonal.py  get_skill_season.py  medcof2hr.py  oni2enso.py  oni2enso_netcdf.py  plot_seasonal_validation_results.py  pred2tercile_operational.py  regrid_obs.py
pyseasonal/products/: seas2ipe.py  seas2ipe_singlevars.py
pyseasonal/utils/: config.py  functions_seasonal.py  mapping.py
swen/: swen_ipe.py  swen_tercile.py
tests/: README.md  __init__.py  test_assign_season_label.py  test_get_years_of_subperiod.py
