[project]
name = "pyseasonal"
version = "0.1.0"
description = "Python package for seasonal prediction verification and real-time forecasts using Copernicus Data Store products"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Swen Brands", email = "brandssf@ifca.unican.es"}
]
maintainers = [
    {name = "Swen Brands", email = "swen.brands@gmail.com"},
    {name = "Jaime Diez", email = "jaime.diez.gp@gmail.com"}
]
dependencies = [
    "cartopy>=0.25.0",
    "dask>=2025.11.0",
    "fire>=0.7.1",
    "matplotlib>=3.7.5",
    "netcdf4>=1.7.3",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "psutil>=7.1.3",
    "pyyaml>=6.0.3",
    "scipy>=1.10.1",
    "xarray>=2023.1.0",
    "xesmf>=0.8.10",
    "xskillscore>=0.0.26",
]
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/pySeasonal"
Documentation = "https://github.com/yourusername/pySeasonal/blob/main/README.md"
Repository = "https://github.com/yourusername/pySeasonal"
Issues = "https://github.com/yourusername/pySeasonal/issues"

[tool.setuptools]
packages = ["pyseasonal"]
