[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyseasonal"
version = "0.1.0"
description = "Python package for seasonal prediction verification and real-time forecasts using Copernicus Data Store products"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Swen Brands", email = "brandssf@ifca.unican.es"}
]
maintainers = [
    {name = "Swen Brands", email = "swen.brands@gmail.com"},
    {name = "Jaime Diez", email = "jaime.diez.gp@gmail.com"}
]
dependencies = [
    "cartopy>=0.25.0",
    "dask>=2025.11.0",
    "fire>=0.7.1",
    "matplotlib>=3.7.5",
    "netcdf4>=1.7.3",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "psutil>=7.1.3",
    "pyyaml>=6.0.3",
    "scipy>=1.10.1",
    "xarray>=2023.1.0",
    "xskillscore>=0.0.26",
]

[project.scripts]
pyseasonal-tercile = "pyseasonal.cli_tercile:main"
pyseasonal-product-ipe = "pyseasonal.cli_product_ipe:main"

[project.optional-dependencies]
dev = [
    "xesmf>=0.8.10",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/SwenBrands/pySeasonal"
Documentation = "https://github.com/SwenBrands/pySeasonal/blob/main/README.md"
Repository = "https://github.com/SwenBrands/pySeasonal"
Issues = "https://github.com/SwenBrands/pySeasonal/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyseasonal*"]
